--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@ Open-Source Enthusiast  ·
 Minimalist  ·"><meta property="og:image" content="https://www.gsavitha.in/images/default-meta-img.png"><meta property="twitter:card" content="summary_large_image"><meta property="twitter:url" content="https://www.gsavitha.in/"><meta property="twitter:title" content="Home | Savitha Gollamudi"><meta property="twitter:description" content="JavaScript Developer  ·  
 Open-Source Enthusiast  ·  
 Minimalist  ·"><meta property="twitter:image" content="https://www.gsavitha.in/images/default-meta-img.png"><title>Home | Savitha Gollamudi</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a class=active href=/>~/</a>
+<a href=/work/>~/work</a>
 <a href=/me/>~/about</a>
 <a href=/categories/>~/categories</a>
-<a href=/notes/>~/notes</a>
-<a href=/work/>~/work</a></small>
+<a href=/notes/>~/notes</a></small>
 <a href=https://www.gsavitha.in/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha Gollamudi</span><span>"</span></div></a><div id=content><div class=page-list><div class=list-item><h3 style="margin:3rem 0 .5rem"><a style=text-decoration:none href=https://www.gsavitha.in/2020/build-your-own-website-in-10-min-with-hugo/>Build your own website in 10 min! with hugo</a></h3><small style=color:gray;font-weight:700>23 AUG, 2020</small><p style=margin-top:.5rem;color:gray>Wait, what? Yes you read it right, you can build and host your website in 10 min 😎.
 But how?
-Static site generators to the rescue Ok but first, what is a static site? 😕 Basically websites are of two types, static and dynamic. A …</p></div></div></div><footer style="padding:6rem 1rem 2rem;text-align:center;color:gray"><small>built with <a href=https://gohugo.io>hugo</a> and
+Static site generators to the rescue Ok but first, what is a static site? 😕 Basically websites are of two types, static and dynamic. A …</p></div></div></div><footer style="padding:6rem 1rem 2rem;text-align:center;color:gray"><small style=display:block><code>_index.md</code> was last updated on
+<code>22 August, 2020</code>. Generated
+from
+<a target=_blank href=https://github.com/g-savitha/portfolio/tree/43300f2f2880d603caa78ee985f7d048ece8ce25 style=text-decoration:none><code>43300f2</code></a>
+because of <code>portfolio</code></small>
+<small>built with <a href=https://gohugo.io>hugo</a> and
 <span style=color:red>❤️</span></small></footer><script>(()=>{if(document.queryCommandSupported("copy")){const codeBlocks=[...document.querySelectorAll(".highlight")];codeBlocks.forEach((block)=>{block.querySelector("pre.chroma").style.paddingTop="3rem";block.style.position="relative";const handler=document.createElement("button");handler.textContent="COPY";handler.style.position="absolute";handler.style.top="10px";handler.style.right="10px";handler.style.padding="0.25rem 0.5rem";handler.style.background="#ffffff";handler.style.borderRadius="4px";handler.style.border="1px solid #C9D5DE";handler.style.color="#2d3748";handler.addEventListener("click",()=>{const textarea=document.createElement("textarea");textarea.value=block.querySelector(".chroma > code").textContent;document.body.prepend(textarea);textarea.style.position="absolute";textarea.style.opacity=0;textarea.select();document.execCommand("copy");textarea.remove();handler.textContent="COPIED!";setTimeout(()=>(handler.textContent="COPY"),2000);});const langCard=document.createElement("span");const lang=block.querySelector(".chroma > code").classList.toString().split("language-")[1];langCard.textContent=lang;langCard.style.top="0";langCard.style.left="1rem";langCard.style.color="#ffffff";langCard.style.fontSize="0.7em";langCard.style.position="absolute";langCard.style.background="#3f51b5";langCard.style.padding="0.25rem 0.5rem";langCard.style.textTransform="uppercase";langCard.style.borderRadius="0 0 4px 4px";block.prepend(langCard);block.prepend(handler);});}})();</script></body></html>
