--- a/notes/recursion/index.html
+++ b/notes/recursion/index.html
@@ -1,12 +1,95 @@
-<!doctype html><html lang=en><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=https://www.gsavitha.in/css/base.css media=all><link rel=stylesheet href=https://www.gsavitha.in/css/syntax.css media=all><link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel=stylesheet><script async src=https://kit.fontawesome.com/66c0687ece.js crossorigin=anonymous></script><meta name=description content="intro"><meta name=title content="Recursion | Savitha Gollamudi"><meta name=keywords content="tech,programming,javascript,react,rust,nodejs,node,mongodb,postgresql"><meta name=robots content="index, follow"><meta charset=utf-8><meta name=language content="English"><meta name=revisit-after content="2 days"><meta name=author content="Abdus <mail@abdus.xyz>"><meta property="og:type" content="website"><meta property="og:url" content="https://www.gsavitha.in/notes/recursion/"><meta property="og:title" content="Recursion | Savitha Gollamudi"><meta property="og:description" content="intro"><meta property="og:image" content="https://www.gsavitha.in/images/default-meta-img.png"><meta property="twitter:card" content="summary_large_image"><meta property="twitter:url" content="https://www.gsavitha.in/notes/recursion/"><meta property="twitter:title" content="Recursion | Savitha Gollamudi"><meta property="twitter:description" content="intro"><meta property="twitter:image" content="https://www.gsavitha.in/images/default-meta-img.png"><title>Recursion | Savitha Gollamudi</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a href=/>~/</a>
+<!doctype html><html lang=en><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=https://www.gsavitha.in/css/base.css media=all><link rel=stylesheet href=https://www.gsavitha.in/css/syntax.css media=all><link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel=stylesheet><script async src=https://kit.fontawesome.com/66c0687ece.js crossorigin=anonymous></script><meta name=description content="Intro to recursion What is recursion?
+Recursion : A function calling itself directly or indirectly.
+Directly:
+void fun1(){ //somecode ...  fun1(); //some other code... } Indirectly: Not a very common approach (Mostly direct recursive approach is used)
+void fun1(){ //somecode ...  fun2(); //some other code... } void fun2(){ //somecode ...  fun1(); //some other code... }  If you dont add a base case, recursion never stops and we might end up with stackoverflow(in case of java) or segmentation fault error(in case of cpp)."><meta name=title content="Recursion | Savitha Gollamudi"><meta name=keywords content="tech,programming,javascript,react,rust,nodejs,node,mongodb,postgresql"><meta name=robots content="index, follow"><meta charset=utf-8><meta name=language content="English"><meta name=revisit-after content="2 days"><meta name=author content="Abdus <mail@abdus.xyz>"><meta property="og:type" content="website"><meta property="og:url" content="https://www.gsavitha.in/notes/recursion/"><meta property="og:title" content="Recursion | Savitha Gollamudi"><meta property="og:description" content="Intro to recursion What is recursion?
+Recursion : A function calling itself directly or indirectly.
+Directly:
+void fun1(){ //somecode ...  fun1(); //some other code... } Indirectly: Not a very common approach (Mostly direct recursive approach is used)
+void fun1(){ //somecode ...  fun2(); //some other code... } void fun2(){ //somecode ...  fun1(); //some other code... }  If you dont add a base case, recursion never stops and we might end up with stackoverflow(in case of java) or segmentation fault error(in case of cpp)."><meta property="og:image" content="https://www.gsavitha.in/images/default-meta-img.png"><meta property="twitter:card" content="summary_large_image"><meta property="twitter:url" content="https://www.gsavitha.in/notes/recursion/"><meta property="twitter:title" content="Recursion | Savitha Gollamudi"><meta property="twitter:description" content="Intro to recursion What is recursion?
+Recursion : A function calling itself directly or indirectly.
+Directly:
+void fun1(){ //somecode ...  fun1(); //some other code... } Indirectly: Not a very common approach (Mostly direct recursive approach is used)
+void fun1(){ //somecode ...  fun2(); //some other code... } void fun2(){ //somecode ...  fun1(); //some other code... }  If you dont add a base case, recursion never stops and we might end up with stackoverflow(in case of java) or segmentation fault error(in case of cpp)."><meta property="twitter:image" content="https://www.gsavitha.in/images/default-meta-img.png"><title>Recursion | Savitha Gollamudi</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a href=/>~/</a>
 <a href=/work/>~/work</a>
 <a href=/me/>~/about</a>
 <a href=/categories/>~/categories</a>
 <a href=/notes/>~/notes</a></small>
 <a href=https://www.gsavitha.in/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha Gollamudi</span><span>"</span></div></a><div id=content><div style="text-align:center;margin:3rem 0"><h2>Recursion</h2><small>23 August, 2020&nbsp;&nbsp;&#183;&nbsp;&nbsp;</small>
-<small><a style=text-decoration:none href=/categories/dsa>Dsa</a></small></div><div class=section-content style=color:#252525><h1 id=intro>intro</h1></div><div style=margin-top:2rem><i class="fas fa-tags" style=font-size:.7em;color:gray></i><a style="border:0;font-size:.8em;padding:0 4px;text-decoration:none" href=/tags/ds-algo>&nbsp;ds-algo</a>
+<small><a style=text-decoration:none href=/categories/dsa>Dsa</a>
+<a style=text-decoration:none href=/categories/recursion>Recursion</a></small></div><div class=section-content style=color:#252525><h2 id=intro-to-recursion>Intro to recursion</h2><p>What is recursion?</p><p><em>Recursion</em> : A function calling itself directly or indirectly.</p><p><em>Directly:</em></p><div class=highlight><pre class=chroma><code class=language-cpp data-lang=cpp><span class=kt>void</span> <span class=nf>fun1</span><span class=p>(){</span>
+    <span class=c1>//somecode ...
+</span><span class=c1></span>    <span class=n>fun1</span><span class=p>();</span>
+    <span class=c1>//some other code...
+</span><span class=c1></span><span class=p>}</span>
+</code></pre></div><p><em>Indirectly:</em> Not a very common approach (Mostly direct recursive approach is used)</p><div class=highlight><pre class=chroma><code class=language-cpp data-lang=cpp><span class=kt>void</span> <span class=nf>fun1</span><span class=p>(){</span>
+    <span class=c1>//somecode ...
+</span><span class=c1></span>    <span class=n>fun2</span><span class=p>();</span>
+    <span class=c1>//some other code...
+</span><span class=c1></span><span class=p>}</span>
+<span class=kt>void</span> <span class=nf>fun2</span><span class=p>(){</span>
+    <span class=c1>//somecode ...
+</span><span class=c1></span>    <span class=n>fun1</span><span class=p>();</span>
+    <span class=c1>//some other code...
+</span><span class=c1></span><span class=p>}</span>
+
+
+</code></pre></div><ul><li>If you <em>dont add a base case</em>, <em>recursion never stops</em> and we might end up with <em>stackoverflow</em>(in case of java) or <em>segmentation fault</em> error(in case of cpp).</li><li>There should be <strong>one stopping condition atleast</strong>. Such stopping conditions are called <em><em>Base cases</em></em></li></ul><p><em>Example:</em></p><div class=highlight><pre class=chroma><code class=language-cpp data-lang=cpp><span class=kt>void</span> <span class=nf>fun1</span><span class=p>(</span><span class=kt>int</span> <span class=n>n</span><span class=p>)</span>
+<span class=p>{</span>
+    <span class=c1>//Base Case
+</span><span class=c1></span>    <span class=k>if</span> <span class=p>(</span><span class=n>n</span> <span class=o>==</span> <span class=mi>0</span><span class=p>)</span>
+        <span class=k>return</span><span class=p>;</span>
+    <span class=n>cout</span> <span class=o>&lt;&lt;</span> <span class=s>&#34;Function 1&#34;</span> <span class=o>&lt;&lt;</span> <span class=n>endl</span><span class=p>;</span>
+    <span class=n>fun1</span><span class=p>(</span><span class=n>n</span> <span class=o>-</span> <span class=mi>1</span><span class=p>);</span>
+<span class=p>}</span>
+<span class=kt>int</span> <span class=nf>main</span><span class=p>(</span><span class=kt>int</span> <span class=n>argc</span><span class=p>,</span> <span class=kt>char</span> <span class=k>const</span> <span class=o>*</span><span class=n>argv</span><span class=p>[])</span>
+<span class=p>{</span>
+    <span class=cm>/* code */</span>
+    <span class=n>fun1</span><span class=p>(</span><span class=mi>2</span><span class=p>);</span>
+    <span class=k>return</span> <span class=mi>0</span><span class=p>;</span>
+<span class=p>}</span>
+
+</code></pre></div><h3 id=typical-structure-of-a-recursion>Typical structure of a recursion</h3><p>(Assuming: You are not using global vars or some other tricks to stop recursion ).</p><pre><code>returntype function(parameters){
+    Base cases
+    //some other code.....
+    Recursive call (i.e., call to function()) with atleast one change in parameters
+    //some other code...
+}
+</code></pre><h2 id=applications-of-recursion>Applications of recursion</h2><p>Any problem which can be solved iteratively can also be solved using recursively and vice-versa. They both have same expressive power.</p><p>Now the question is if we can write equivalent iterative code for every recursive code or vice versa, <strong>where do we use recursion?</strong></p><ul><li><p>Many algorithm techniques are based on recursion.</p><ul><li><strong>Dynamic programming</strong><ul><li>In DP, generally <em>first solution is to write a recursive solution</em>. If we see overlapping subproblems (apply memoization or tabulation), we use DP to optimise it.</li><li><em>Example:</em> Finding diff between two files (solved using LCS approach)</li></ul></li><li><strong>Backtracking</strong><ul><li>These problems are <em>inherently recursive</em> in nature. - <em>Example</em> : Rat in a maze, n-queens problem. (Its easy to write recursive solns than iterative for problems like this)</li></ul></li><li><strong>Divide and conquer</strong><ul><li><em>Examples:</em> Binary search, quicksort and mergesort</li></ul></li></ul></li><li><p>Many problems which are <em>inherently recursive</em> (Easy to write recursive than iterative)</p><ul><li><strong>Towers of Hanoi</strong></li><li><strong>DFS based travels</strong><ul><li>Of <em>Graphs</em></li><li>Inorder, preorder postorder traversals of <em>tree</em></li><li>Searching for a file in your pc - solid example of DFS</li></ul></li></ul></li><li><p><em>Cons of recursion</em></p><ul><li>(Auxillary) space complexity increases</li><li>Function call overhead.</li></ul></li><li><p><em>Pros:</em></p><ul><li>Easy implementation</li></ul></li></ul><h2 id=examples>Examples</h2><div class=highlight><pre class=chroma><code class=language-cpp data-lang=cpp><span class=kt>void</span> <span class=nf>fun1</span><span class=p>(</span><span class=kt>int</span> <span class=n>n</span><span class=p>)</span>
+<span class=p>{</span>
+
+    <span class=k>if</span> <span class=p>(</span><span class=n>n</span> <span class=o>==</span> <span class=mi>0</span><span class=p>)</span>
+        <span class=k>return</span><span class=p>;</span> <span class=c1>//Base Case
+</span><span class=c1></span>    <span class=n>cout</span> <span class=o>&lt;&lt;</span> <span class=n>n</span> <span class=o>&lt;&lt;</span> <span class=n>endl</span><span class=p>;</span>
+    <span class=n>fun1</span><span class=p>(</span><span class=n>n</span> <span class=o>-</span> <span class=mi>1</span><span class=p>);</span>
+    <span class=n>cout</span> <span class=o>&lt;&lt;</span> <span class=n>n</span> <span class=o>&lt;&lt;</span> <span class=n>endl</span><span class=p>;</span>
+<span class=p>}</span>
+<span class=kt>int</span> <span class=nf>main</span><span class=p>(</span><span class=kt>int</span> <span class=n>argc</span><span class=p>,</span> <span class=kt>char</span> <span class=k>const</span> <span class=o>*</span><span class=n>argv</span><span class=p>[])</span>
+<span class=p>{</span>
+    <span class=cm>/* code */</span>
+    <span class=n>fun1</span><span class=p>(</span><span class=mi>3</span><span class=p>);</span>
+    <span class=k>return</span> <span class=mi>0</span><span class=p>;</span>
+<span class=p>}</span>
+<span class=c1>//Output : 321123
+</span></code></pre></div><div class=highlight><pre class=chroma><code class=language-cpp data-lang=cpp><span class=kt>void</span> <span class=nf>fun1</span><span class=p>(</span><span class=kt>int</span> <span class=n>n</span><span class=p>)</span>
+<span class=p>{</span>
+
+    <span class=k>if</span> <span class=p>(</span><span class=n>n</span> <span class=o>==</span> <span class=mi>0</span><span class=p>)</span>
+        <span class=k>return</span><span class=p>;</span> <span class=c1>//Base Cas
+</span><span class=c1></span>    <span class=n>fun1</span><span class=p>(</span><span class=n>n</span> <span class=o>-</span> <span class=mi>1</span><span class=p>);</span>
+    <span class=n>cout</span> <span class=o>&lt;&lt;</span> <span class=n>n</span> <span class=o>&lt;&lt;</span> <span class=n>endl</span><span class=p>;</span>
+    <span class=n>fun1</span><span class=p>(</span><span class=n>n</span> <span class=o>-</span> <span class=mi>1</span><span class=p>);</span>
+<span class=p>}</span>
+<span class=kt>int</span> <span class=nf>main</span><span class=p>(</span><span class=kt>int</span> <span class=n>argc</span><span class=p>,</span> <span class=kt>char</span> <span class=k>const</span> <span class=o>*</span><span class=n>argv</span><span class=p>[])</span>
+<span class=p>{</span>
+    <span class=cm>/* code */</span>
+    <span class=n>fun1</span><span class=p>(</span><span class=mi>3</span><span class=p>);</span>
+    <span class=k>return</span> <span class=mi>0</span><span class=p>;</span>
+<span class=p>}</span>
+<span class=c1>//Output : 1213121
+</span></code></pre></div></div><div style=margin-top:2rem><i class="fas fa-tags" style=font-size:.7em;color:gray></i><a style="border:0;font-size:.8em;padding:0 4px;text-decoration:none" href=/tags/ds-algo>&nbsp;ds-algo</a>
 <a style="border:0;font-size:.8em;padding:0 4px;text-decoration:none" href=/tags/programming>&nbsp;programming</a>
-<a style="border:0;font-size:.8em;padding:0 4px;text-decoration:none" href=/tags/competitive-programming>&nbsp;competitive-programming</a></div><div style=margin-top:5rem><a href=https://www.gsavitha.in/notes/ch-01-intro-to-react/ class="prev-next newer">&Larr;Intro to React</a></div><script type=application/ld+json>{"@context":"http://schema.org","@type":"BlogPosting","mainEntityOfPage":{"@type":"WebPage","@id":"https:\/\/www.gsavitha.in\/"},"articleSection":"notes","name":"Recursion","headline":"Recursion","description":"intro ","inLanguage":"en-US","author":"Savitha","creator":"Savitha","publisher":"Savitha","accountablePerson":"Savitha","copyrightHolder":"Savitha","copyrightYear":"23230","datePublished":"2020-08-23 17:17:32 \u002b0530 \u002b0530","dateModified":"2020-08-23 17:17:32 \u002b0530 \u002b0530","url":"https:\/\/www.gsavitha.in\/notes\/recursion\/","wordCount":"1","keywords":["ds-algo","programming","competitive-programming","Blog"]}</script><script type=module>
+<a style="border:0;font-size:.8em;padding:0 4px;text-decoration:none" href=/tags/competitive-programming>&nbsp;competitive-programming</a></div><div style=margin-top:5rem><a href=https://www.gsavitha.in/notes/math/ class="prev-next newer">&Larr;Basic Math required for problem solving</a></div><script type=application/ld+json>{"@context":"http://schema.org","@type":"BlogPosting","mainEntityOfPage":{"@type":"WebPage","@id":"https:\/\/www.gsavitha.in\/"},"articleSection":"notes","name":"Recursion","headline":"Recursion","description":"Intro to recursion What is recursion?\nRecursion : A function calling itself directly or indirectly.\nDirectly:\nvoid fun1(){ \/\/somecode ...  fun1(); \/\/some other code... } Indirectly: Not a very common approach (Mostly direct recursive approach is used)\nvoid fun1(){ \/\/somecode ...  fun2(); \/\/some other code... } void fun2(){ \/\/somecode ...  fun1(); \/\/some other code... }  If you dont add a base case, recursion never stops and we might end up with stackoverflow(in case of java) or segmentation fault error(in case of cpp).","inLanguage":"en-US","author":"Savitha","creator":"Savitha","publisher":"Savitha","accountablePerson":"Savitha","copyrightHolder":"Savitha","copyrightYear":"23230","datePublished":"2020-08-23 17:17:32 \u002b0530 \u002b0530","dateModified":"2020-08-23 17:17:32 \u002b0530 \u002b0530","url":"https:\/\/www.gsavitha.in\/notes\/recursion\/","wordCount":"439","keywords":["ds-algo","programming","competitive-programming","Blog"]}</script><script type=module>
   import { annotate } from "https://unpkg.com/rough-notation?module";
 
   function checkParent(elem) {
@@ -58,9 +141,9 @@
     console.log(exception.message);
   }
 </script><style>.section-content em,.section-content strong,.section-content del{font-style:normal;font-weight:400;text-decoration:none}blockquote{background-color:#fff;padding:.3rem;margin:2rem 0}</style></div><footer style="padding:6rem 1rem 2rem;text-align:center;color:gray"><small style=display:block><code>recursion.md</code> was last updated on
-<code>23 August, 2020</code>. Generated
+<code>1 September, 2020</code>. Generated
 from
-<a target=_blank href=https://github.com/g-savitha/portfolio/tree/74368d26e5845a6ef5312ead07b83061550e4979 style=text-decoration:none><code>74368d2</code></a>
-because of <code>test</code></small>
+<a target=_blank href=https://github.com/g-savitha/portfolio/tree/fd0426398b9181e9da6ce596b553f8a5a2fda299 style=text-decoration:none><code>fd04263</code></a>
+because of <code>updated notes</code></small>
 <small>built with <a href=https://gohugo.io>hugo</a> and
 <span style=color:red>❤️</span></small></footer><script>(()=>{if(document.queryCommandSupported("copy")){const codeBlocks=[...document.querySelectorAll(".highlight")];codeBlocks.forEach((block)=>{block.querySelector("pre.chroma").style.paddingTop="3rem";block.style.position="relative";const handler=document.createElement("button");handler.textContent="COPY";handler.style.position="absolute";handler.style.top="10px";handler.style.right="10px";handler.style.padding="0.25rem 0.5rem";handler.style.background="#ffffff";handler.style.borderRadius="4px";handler.style.border="1px solid #C9D5DE";handler.style.color="#2d3748";handler.addEventListener("click",()=>{const textarea=document.createElement("textarea");textarea.value=block.querySelector(".chroma > code").textContent;document.body.prepend(textarea);textarea.style.position="absolute";textarea.style.opacity=0;textarea.select();document.execCommand("copy");textarea.remove();handler.textContent="COPIED!";setTimeout(()=>(handler.textContent="COPY"),2000);});const langCard=document.createElement("span");const lang=block.querySelector(".chroma > code").classList.toString().split("language-")[1];langCard.textContent=lang;langCard.style.top="0";langCard.style.left="1rem";langCard.style.color="#ffffff";langCard.style.fontSize="0.7em";langCard.style.position="absolute";langCard.style.background="#3f51b5";langCard.style.padding="0.25rem 0.5rem";langCard.style.textTransform="uppercase";langCard.style.borderRadius="0 0 4px 4px";block.prepend(langCard);block.prepend(handler);});}})();</script></body></html>
