deploy: 19669b7091e919abdb3e7d397315a60847a21daa

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Minimalist  ·"><meta property="og:image" content="https://www.gsavitha.in/image
 Open-Source Enthusiast  ·  
 Minimalist  ·"><meta property="twitter:image" content="https://www.gsavitha.in/images/default-meta-img.png"><title>Home | Savitha Gollamudi</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a class=active href=/>~/</a>
 <a href=/work/>~/work</a>
-<a href=/me/>~/about</a>
+<a href=/about/>~/about</a>
 <a href=/categories/>~/categories</a>
 <a href=/notes/>~/notes</a></small>
 <a href=https://www.gsavitha.in/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha Gollamudi</span><span>"</span></div></a><div id=content><div class=page-list><div class=list-item><h3 style="margin:3rem 0 .5rem"><a style=text-decoration:none href=https://www.gsavitha.in/2020/react-state-patterns/>React State Patterns</a></h3><small style=color:gray;font-weight:700>1 SEP, 2020</small><p style=margin-top:.5rem;color:gray>Setting State Using State We know that setState() is asynchronous…
