--- a/notes/ch-03-intro-to-state/index.html
+++ b/notes/ch-03-intro-to-state/index.html
@@ -6,7 +6,7 @@ Why would the server need to know if a modal is open?"><meta property="og:image"
  logged-in users see a different screen than logged-out users clicking “edit profile” opens up a modal (pop-up) window sections of a website can expand or collapse, for instance clicking “read more”  The state of the client interface (frontend) is not always directly tied to state on the server.
 Why would the server need to know if a modal is open?"><meta property="twitter:image" content="https://www.gsavitha.in/images/default-meta-img.png"><title>Intro to State | Savitha Gollamudi</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a href=/>~/</a>
 <a href=/work/>~/work</a>
-<a href=/me/>~/about</a>
+<a href=/about/>~/about</a>
 <a href=/categories/>~/categories</a>
 <a href=/notes/>~/notes</a></small>
 <a href=https://www.gsavitha.in/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha Gollamudi</span><span>"</span></div></a><div id=content><div style="text-align:center;margin:3rem 0"><h2>Intro to State</h2><small>24 August, 2020&nbsp;&nbsp;&#183;&nbsp;&nbsp;</small>
