--- a/notes/math/index.html
+++ b/notes/math/index.html
@@ -6,7 +6,7 @@
  A simple solution is..
  Check if number n != 0 increment count of digits by 1 if n !=0 reduce number by dividing it with 10 repeat above steps, until n is reduced to 0  //iterative int countDigits(long n){ int count = 0; while(n > 0){ n = n/10; ++count; } return count; } // TC: O(digitsCount), SC: O(1) //recursive int countDigits(long n){ if(n==0) return 1; return 1+ countDigits(n/10); } // TC: O(digitsCount), SC: O(digitsCount) Another approach :"><meta property="twitter:image" content="https://www.gsavitha.in/images/default-meta-img.png"><title>Basic Math required for problem solving | Savitha Gollamudi</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a href=/>~/</a>
 <a href=/work/>~/work</a>
-<a href=/me/>~/about</a>
+<a href=/about/>~/about</a>
 <a href=/categories/>~/categories</a>
 <a href=/notes/>~/notes</a></small>
 <a href=https://www.gsavitha.in/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha Gollamudi</span><span>"</span></div></a><div id=content><div style="text-align:center;margin:3rem 0"><h2>Basic Math required for problem solving</h2><small>23 August, 2020&nbsp;&nbsp;&#183;&nbsp;&nbsp;</small>
