--- a/notes/recursion/index.html
+++ b/notes/recursion/index.html
@@ -12,7 +12,7 @@ Directly:
 void fun1(){ //somecode ...  fun1(); //some other code... } Indirectly: Not a very common approach (Mostly direct recursive approach is used)
 void fun1(){ //somecode ...  fun2(); //some other code... } void fun2(){ //somecode ...  fun1(); //some other code... }  If you dont add a base case, recursion never stops and we might end up with stackoverflow(in case of java) or segmentation fault error(in case of cpp)."><meta property="twitter:image" content="https://www.gsavitha.in/images/default-meta-img.png"><title>Recursion | Savitha Gollamudi</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a href=/>~/</a>
 <a href=/work/>~/work</a>
-<a href=/me/>~/about</a>
+<a href=/about/>~/about</a>
 <a href=/categories/>~/categories</a>
 <a href=/notes/>~/notes</a></small>
 <a href=https://www.gsavitha.in/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha Gollamudi</span><span>"</span></div></a><div id=content><div style="text-align:center;margin:3rem 0"><h2>Recursion</h2><small>23 August, 2020&nbsp;&nbsp;&#183;&nbsp;&nbsp;</small>
