--- a/notes/ch-01-intro-to-react/index.html
+++ b/notes/ch-01-intro-to-react/index.html
@@ -12,7 +12,7 @@ Developed by and sponsored by Facebook.
  The building blocks of React Pieces of UI & view logic Classes that know how to render themselves into HTML  A bit like this&mldr;
 class Dog { constructor(name, color) { this."><meta property="twitter:image" content="https://www.gsavitha.in/images/default-meta-img.png"><title>Intro to React | Savitha Gollamudi</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a href=/>~/</a>
 <a href=/work/>~/work</a>
-<a href=/me/>~/about</a>
+<a href=/about/>~/about</a>
 <a href=/categories/>~/categories</a>
 <a href=/notes/>~/notes</a></small>
 <a href=https://www.gsavitha.in/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha Gollamudi</span><span>"</span></div></a><div id=content><div style="text-align:center;margin:3rem 0"><h2>Intro to React</h2><small>24 August, 2020&nbsp;&nbsp;&#183;&nbsp;&nbsp;</small>
