--- a/notes/ch-05-react-events/index.html
+++ b/notes/ch-05-react-events/index.html
@@ -9,7 +9,7 @@ Event Attributes Any event you can listen for in JS, you can listen for in React
 Examples:
  Mouse events: onClick, onMouseOver, etc Form events: onSubmit, etc Keyboard events: onKeyDown, onKeyUp, onKeyPress Full list  Example: WiseSquare."><meta property="twitter:image" content="https://www.gsavitha.in/images/default-meta-img.png"><title>React Events | Savitha Gollamudi</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a href=/>~/</a>
 <a href=/work/>~/work</a>
-<a href=/me/>~/about</a>
+<a href=/about/>~/about</a>
 <a href=/categories/>~/categories</a>
 <a href=/notes/>~/notes</a></small>
 <a href=https://www.gsavitha.in/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha Gollamudi</span><span>"</span></div></a><div id=content><div style="text-align:center;margin:3rem 0"><h2>React Events</h2><small>25 August, 2020&nbsp;&nbsp;&#183;&nbsp;&nbsp;</small>
