--- a/about/index.html
+++ b/about/index.html
@@ -5,20 +5,20 @@
 <a href=/notes/>~/notes</a></small>
 <a href=https://www.gsavitha.in/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha Gollamudi</span><span>"</span></div></a><div id=content><div style="text-align:center;margin:3rem 0"><h2>About Me</h2><small></small></div><div class=section-content style=color:#252525><img src="https://avatars1.githubusercontent.com/u/31612459?s=460&u=0aa5423759e1864a5592d6ed4f111f98b5373ee3&v=4" alt id=image-me style="float:right;border-radius:50%;box-shadow:0 2.8px 2.2px rgba(0,0,0,.02),0 6.7px 5.3px rgba(0,0,0,.028),0 12.5px 10px rgba(0,0,0,.035),0 22.3px 17.9px rgba(0,0,0,.042),0 41.8px 33.4px rgba(0,0,0,.05),0 100px 80px rgba(0,0,0,.07)">
 <span class=drop-cap>H</span>ello world <span>&#128075;&#127995;</span>,
-Savitha here. A passionate Full stack web developer. I have been working with
-web technologies for around 4+ years with 2 years of experience in software
-industry <span>&#129299;</span>. I've gotten my hands dirty in various languages
-and frameworks.<p>I am <a href=https://github.com/g-savitha>good at JavaScript</a> and its
-ecosystem. I am well-versed in coding back-end with Node.js and Java. For
-database I prefer to use MongoDB, but I am educated in SQL as well.</p><p><strong>Fun fact :</strong> I am a great fan of
-<a href=https://www.theminimalists.com/pitch/>minimalism</a> and I prefer
-Green tea over coffee anyday. Other than coding, in my free time I play video
-games and listen to
+Savitha here. A passionate <strong>Full stack web developer. </strong>I have
+been working with web technologies for around 4+ years with 2 years of
+experience in software industry <span>&#129299;</span>. I've gotten my hands
+dirty in various languages and frameworks.<p>I am
+<strong><a href=https://github.com/g-savitha>good at JavaScript</a></strong>
+and its ecosystem. I am well-versed in coding back-end with Node.js and Java.
+For database I prefer to use MongoDB, but I am educated in SQL as well.</p><p><strong>Fun facts :</strong> I am a great fan of
+<strong><a href=https://www.theminimalists.com/pitch/>minimalism</a> </strong>and I prefer Green tea over coffee anyday. Other than coding, in my free time
+I play video games and listen to
 <a href="https://open.spotify.com/user/31rsdkn5tx7bs26fsy7nefvcpsda?si=-mcRCEL6RrGXvBafgYk98g">music</a></p><p>Feel free to
-<a href="mailto:mailto@gsavitha.in?subject=Hello">Drop an email</a> or tweet
-me <a href=https://twitter.com/gsavitha_>@gsavitha_</a> anytime for
-opportunities or to discuss about any Open source ideas or if you need any
-help. <span>&#128516;</span></p><h3>Skills.</h3><div style=margin:auto;margin-top:5rem;text-align:center;max-width:50rem><style>.skills-img{max-width:40px;margin-right:1rem;margin-bottom:1rem;cursor:pointer;transition:.2s ease-in-out transform}.skills-img:hover{transform:translateY(-0.5rem)}@media(max-width:700px){.skills-img{max-width:30px}}</style><a href=https://developer.mozilla.org/en-US/docs/Web/JavaScript title=javascript target=_blank><img src=/images/icons/javascript.svg class=skills-img></a>
+<strong><a href="mailto:mailto@gsavitha.in?subject=Hello">Drop an email</a></strong>
+or tweet me
+<strong><a href=https://twitter.com/gsavitha_>@gsavitha_ </a></strong>anytime for opportunities or to discuss about any Open source ideas or if you
+need any help. <span>&#128516;</span></p><h3>Skills.</h3><div style=margin:auto;margin-top:5rem;text-align:center;max-width:50rem><style>.skills-img{max-width:40px;margin-right:1rem;margin-bottom:1rem;cursor:pointer;transition:.2s ease-in-out transform}.skills-img:hover{transform:translateY(-0.5rem)}@media(max-width:700px){.skills-img{max-width:30px}}</style><a href=https://developer.mozilla.org/en-US/docs/Web/JavaScript title=javascript target=_blank><img src=/images/icons/javascript.svg class=skills-img></a>
 <a href=https://reactjs.org/ title=react target=_blank><img src=/images/icons/react.svg class=skills-img></a>
 <a href=https://nodejs.org title=node-dot-js target=_blank><img src=/images/icons/node-dot-js.svg class=skills-img></a>
 <a href=https://graphql.org/ title=graphql target=_blank><img src=/images/icons/graphql.svg class=skills-img></a>
@@ -89,9 +89,9 @@ listing them for your convenience.<div class=social-links><a href="mailto:mailto
         margin-right: 0.5rem;
       }
     `;const style=document.createElement("style");style.innerHTML=css;head.appendChild(style);})();</script></div><div style=margin-top:5rem><a href=https://www.gsavitha.in/work/ class="prev-next newer">&Larr;Works</a></div><script type=application/ld+json>{"@context":"http://schema.org","@type":"BlogPosting","mainEntityOfPage":{"@type":"WebPage","@id":"https:\/\/www.gsavitha.in\/"},"articleSection":"pages","name":"About Me","headline":"About Me","description":"About.-- Hello world \u0026#128075;\u0026#127995;, Savitha here. A passionate Full stack web developer. I have been working with web technologies for around 4\u002b years with 2 years of experience in software industry \u0026#129299;. I\u0027ve gotten my hands dirty in various languages and frameworks.  I am good at JavaScript and its ecosystem. I am well-versed in coding back-end with Node.js and Java. For database I prefer to use MongoDB, but I am educated in SQL as well.","inLanguage":"en-US","author":"Savitha","creator":"Savitha","publisher":"Savitha","accountablePerson":"Savitha","copyrightHolder":"Savitha","copyrightYear":"1010","datePublished":"0001-01-01 00:00:00 \u002b0000 UTC","dateModified":"0001-01-01 00:00:00 \u002b0000 UTC","url":"https:\/\/www.gsavitha.in\/about\/","wordCount":"290","keywords":["Blog"]}</script></div><footer style="padding:6rem 1rem 2rem;text-align:center;color:gray"><small style=display:block><code>about.html</code> was last updated on
-<code>13 September, 2020</code>. Generated
+<code>21 September, 2020</code>. Generated
 from
-<a target=_blank href=https://github.com/g-savitha/portfolio/tree/7db8d1f58b9739912d3e17a674779c5756be67d3 style=text-decoration:none><code>7db8d1f</code></a>
-because of <code>update about</code></small>
+<a target=_blank href=https://github.com/g-savitha/portfolio/tree/999370a443e56796542b1879e9559e396e1911e0 style=text-decoration:none><code>999370a</code></a>
+because of <code>Fix typos</code></small>
 <small>built with <a href=https://gohugo.io>hugo</a> and
 <span style=color:red>❤️</span></small></footer><script>(()=>{if(document.queryCommandSupported("copy")){const codeBlocks=[...document.querySelectorAll(".highlight")];codeBlocks.forEach((block)=>{block.querySelector("pre.chroma").style.paddingTop="3rem";block.style.position="relative";const handler=document.createElement("button");handler.textContent="COPY";handler.style.position="absolute";handler.style.top="10px";handler.style.right="10px";handler.style.padding="0.25rem 0.5rem";handler.style.background="#ffffff";handler.style.borderRadius="4px";handler.style.border="1px solid #C9D5DE";handler.style.color="#2d3748";handler.addEventListener("click",()=>{const textarea=document.createElement("textarea");textarea.value=block.querySelector(".chroma > code").textContent;document.body.prepend(textarea);textarea.style.position="absolute";textarea.style.opacity=0;textarea.select();document.execCommand("copy");textarea.remove();handler.textContent="COPIED!";setTimeout(()=>(handler.textContent="COPY"),2000);});const langCard=document.createElement("span");const lang=block.querySelector(".chroma > code").classList.toString().split("language-")[1];langCard.textContent=lang;langCard.style.top="0";langCard.style.left="1rem";langCard.style.color="#ffffff";langCard.style.fontSize="0.7em";langCard.style.position="absolute";langCard.style.background="#3f51b5";langCard.style.padding="0.25rem 0.5rem";langCard.style.textTransform="uppercase";langCard.style.borderRadius="0 0 4px 4px";block.prepend(langCard);block.prepend(handler);});}})();</script></body></html>
