deploy: 0a159a28b4776f11840fa13654d17457195ac040

--- a/notes/ch-01-intro-to-react/index.html
+++ b/notes/ch-01-intro-to-react/index.html
@@ -10,11 +10,12 @@ Developed by and sponsored by Facebook.
 Developed by and sponsored by Facebook.
  Make it easy to make reusable view components  These encapsulate logic and HTML into a class   Often make it easier to build modular applications  Components :
  The building blocks of React Pieces of UI & view logic Classes that know how to render themselves into HTML  A bit like this&mldr;
-1class Dog { 2 constructor(name, color) { 3 this."><meta property="twitter:image" content="https://www.gsavitha.in/images/default-meta-img.png"><title>Intro to React | Savitha Gollamudi</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a href=/>~/</a>
-<a href=/work/>~/work</a>
-<a href=/about/>~/about</a>
-<a href=/categories/>~/categories</a>
-<a href=/notes/>~/notes</a></small>
+1class Dog { 2 constructor(name, color) { 3 this."><meta property="twitter:image" content="https://www.gsavitha.in/images/default-meta-img.png"><title>Intro to React | Savitha Gollamudi</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a href=/>~/Home</a>
+<a href=/work/>~/Work</a>
+<a href=/about/>~/About</a>
+<a href=/categories/>~/Categories</a>
+<a href=/notes/>~/Notes</a>
+<a href=https://g-savitha.github.io/Logs/>~/Daily Logs</a></small>
 <a href=https://www.gsavitha.in/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha Gollamudi</span><span>"</span></div></a><div id=content><div style="text-align:center;margin:3rem 0"><h2>Intro to React</h2><small>24 August, 2020&nbsp;&nbsp;&#183;&nbsp;&nbsp;</small>
 <small><a style=text-decoration:none href=/categories/react>React</a></small></div><div style=margin-bottom:3rem><a style=display:inline-block;color:gray;text-decoration:none;font-size:.9em;white-space:nowrap;text-overflow:ellipsis;overflow:hidden;max-width:100% href=https://www.udemy.com/course/modern-react-bootcamp/><i style=font-size:.75em;color:#d3d3d3 class="fas fa-link"></i>&nbsp; https://www.udemy.com/course/modern-react-bootcamp/</a></div><div class=section-content style=color:#252525><p>Popular, powerful front-end framework.</p><p>Developed by and sponsored by Facebook.</p><ul><li>Make it easy to make reusable <code>view components</code><ul><li>These <em>encapsulate logic and HTML</em> into a <em>class</em></li></ul></li><li>Often make it easier to build modular applications</li></ul><p><em>Components :</em></p><ul><li>The building blocks of React</li><li>Pieces of UI & view logic</li><li><em>Classes</em> that know how to <strong>render themselves into HTML</strong></li></ul><p>A bit like this&mldr;</p><div class=highlight><pre class=chroma><code class=language-js data-lang=js><span class=ln>1</span><span class=kr>class</span> <span class=nx>Dog</span> <span class=p>{</span>
 <span class=ln>2</span>  <span class=nx>constructor</span><span class=p>(</span><span class=nx>name</span><span class=p>,</span> <span class=nx>color</span><span class=p>)</span> <span class=p>{</span>
