--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@ Minimalist  ·"><meta name=title content="Home | Savitha Gollamudi"><meta name=k
 Open-Source Enthusiast  ·  
 Minimalist  ·"><meta property="og:image" content="https://www.gsavitha.in/images/default-meta-img.png"><meta property="twitter:card" content="summary_large_image"><meta property="twitter:url" content="https://www.gsavitha.in/"><meta property="twitter:title" content="Home | Savitha Gollamudi"><meta property="twitter:description" content="Full stack developer  ·  
 Open-Source Enthusiast  ·  
-Minimalist  ·"><meta property="twitter:image" content="https://www.gsavitha.in/images/default-meta-img.png"><title>Home | Savitha Gollamudi</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a class=active href=/>~/</a>
-<a href=/work/>~/work</a>
-<a href=/about/>~/about</a>
-<a href=/categories/>~/categories</a>
-<a href=/notes/>~/notes</a></small>
+Minimalist  ·"><meta property="twitter:image" content="https://www.gsavitha.in/images/default-meta-img.png"><title>Home | Savitha Gollamudi</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a class=active href=/>~/Home</a>
+<a href=/work/>~/Work</a>
+<a href=/about/>~/About</a>
+<a href=/categories/>~/Categories</a>
+<a href=/notes/>~/Notes</a>
+<a href=https://g-savitha.github.io/Logs/>~/Daily Logs</a></small>
 <a href=https://www.gsavitha.in/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha Gollamudi</span><span>"</span></div></a><div id=content><div class=page-list><div class=list-item><h3 style="margin:3rem 0 .5rem"><a style=text-decoration:none href=https://www.gsavitha.in/2021/wtf-is-super-vs-superprops/>WTF is super() vs super(props)</a></h3><small style=color:gray;font-weight:700>29 JAN, 2021</small><p style=margin-top:.5rem;color:gray>TL;DR 🚀 If you want to use this.props inside constructor of derived class, use super(props).
 While checking react code, you might have come across a line super(props), sometimes super(). Ever wondered what&rsquo;s the …</p></div><div class=list-item><h3 style="margin:3rem 0 .5rem"><a style=text-decoration:none href=https://www.gsavitha.in/2020/hosting-react-projects-on-gh-pages/>Hosting react projects on GH Pages</a></h3><small style=color:gray;font-weight:700>11 SEP, 2020</small><p style=margin-top:.5rem;color:gray>Want to host a react website? You cant afford paying bills for each and every project?
 Well, Don&rsquo;t worry now you can do that for free with the help of Github Pages. Using GH Pages you can host any website for free in a …</p></div><div class=list-item><h3 style="margin:3rem 0 .5rem"><a style=text-decoration:none href=https://www.gsavitha.in/2020/syncing-git-fork-with-original-repository/>Syncing Git Fork with Original Repository</a></h3><small style=color:gray;font-weight:700>11 SEP, 2020</small><p style=margin-top:.5rem;color:gray>TL;DR 🚀 These are the only commands you need to sync your forked repo with the original repo
