--- a/notes/ch-04-factorial/index.html
+++ b/notes/ch-04-factorial/index.html
@@ -5,12 +5,10 @@
 1int fact(int n){ 2 int res = 1; 3 for(int i = 2; i<=n;i++){ 4 res=res*i; 5 } 6 return res; 7} //TC: O(n), SC: O(1) Recursive solution:"><meta property="og:image" content="https://g-savitha.github.io/images/default-meta-img.png"><meta property="twitter:card" content="summary_large_image"><meta property="twitter:url" content="https://g-savitha.github.io/notes/ch-04-factorial/"><meta property="twitter:title" content="Factorial | Savitha's Notes"><meta property="twitter:description" content="Factorial  Factorial of a positive integer n, denoted by n! is the product of all positive integers <= n   Find factorial of a given number, where n>=0
  Ip: n = 4 Op: 24, Ip: n= 6 Op:720 Ip: n=0 Op: 1 Iterative solution:
 1int fact(int n){ 2 int res = 1; 3 for(int i = 2; i<=n;i++){ 4 res=res*i; 5 } 6 return res; 7} //TC: O(n), SC: O(1) Recursive solution:"><meta property="twitter:image" content="https://g-savitha.github.io/images/default-meta-img.png"><title>Factorial | Savitha's Notes</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a href=/>~/Home</a>
-<a href=/work/>~/Work</a>
-<a href=/about/>~/About</a>
-<a href=/categories/>~/Categories</a>
 <a href=/notes/>~/Notes</a>
+<a href=/categories/>~/Categories</a>
 <a href=https://g-savitha.github.io/Logs/>~/Daily Logs</a></small>
-<a href=https://g-savitha.github.io/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha Gollamudi</span><span>"</span></div></a><div id=content><div style="text-align:center;margin:3rem 0"><h2>Factorial</h2><small>2 September, 2020&nbsp;&nbsp;&#183;&nbsp;&nbsp;</small>
+<a href=https://g-savitha.github.io/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha's Notes</span><span>"</span></div></a><div id=content><div style="text-align:center;margin:3rem 0"><h2>Factorial</h2><small>2 September, 2020&nbsp;&nbsp;&#183;&nbsp;&nbsp;</small>
 <small><a style=text-decoration:none href=/categories/dsa>Dsa</a>
 <a style=text-decoration:none href=/categories/math>Math</a></small></div><div class=section-content style=color:#252525><h2 id=factorial>Factorial</h2><ul><li>Factorial of a positive integer n, denoted by <code>n!</code> is the <em>product of all positive integers &lt;= n</em></li></ul><blockquote><p>Find factorial of a given number, where n>=0</p></blockquote><pre><code class=language-example data-lang=example>Ip: n = 4
 Op: 24, 
