deploy: 1feca7381bc7fc5f66384c4cf7f78d92a01965e5

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@ Minimalist  ·"><meta property="twitter:image" content="https://g-savitha.github
 <a href=/notes/>~/Notes</a>
 <a href=/categories/>~/Categories</a>
 <a href=https://g-savitha.github.io/Logs/>~/Daily Logs</a></small>
-<a href=https://g-savitha.github.io/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha's Notes</span><span>"</span></div></a><div id=content><div class=page-list><div class=list-item><h3 style="margin:3rem 0 .5rem"><a style=text-decoration:none href=https://g-savitha.github.io/2020/build-your-own-website-in-10-min-with-hugo/>Build your own website in 10 min! with hugo</a></h3><small style=color:gray;font-weight:700>23 AUG, 2020</small><p style=margin-top:.5rem;color:gray>Yes you read it right, you can build and host your website in 10 min 😎.
-But how?
-Static site generators to the rescue Ok but first, what is a static site? 😕 Basically websites are of two types, static and dynamic. A static site as …</p></div></div></div><footer style="padding:6rem 1rem 2rem;text-align:center;color:gray"><small style=display:block><code>_index.md</code> was last updated on
+<a href=https://g-savitha.github.io/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha's Notes</span><span>"</span></div></a><div id=content><div class=page-list></div></div><footer style="padding:6rem 1rem 2rem;text-align:center;color:gray"><small style=display:block><code>_index.md</code> was last updated on
 <code>30 January, 2021</code>. Generated
 from
 <a target=_blank href=https://github.com/g-savitha/portfolio/tree/4f6e7f281525172a21b559e231269d1a58bfeb3a style=text-decoration:none><code>4f6e7f2</code></a>
