deploy: 36eff5879428ab55939fc6ffdd5ca11b3049adf5

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@ Minimalist  ·"><meta property="og:image" content="https://g-savitha.github.io/i
 Open-Source Enthusiast  ·  
 Minimalist  ·"><meta property="twitter:image" content="https://g-savitha.github.io/images/default-meta-img.png"><title>Home | Savitha's Notes</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a class=active href=/>~/Home</a>
 <a href=/notes/>~/Notes</a>
-<a href=/categories/>~/Categories</a>
-<a href=https://g-savitha.github.io/Logs/>~/Daily Logs</a></small>
+<a href=/categories/>~/Categories</a></small>
 <a href=https://g-savitha.github.io/ style=text-align:center;display:block;margin-top:3rem><div class=logo><span>#"</span><span>Savitha's Notes</span><span>"</span></div></a><div id=content><div class=page-list></div></div><footer style="padding:6rem 1rem 2rem;text-align:center;color:gray"><small style=display:block><code>_index.md</code> was last updated on
 <code>30 January, 2021</code>. Generated
 from
